--- a/WebContent/NewFile3.html
+++ b/WebContent/NewFile3.html
@@ -9,6 +9,7 @@
 <form name="myform" onsubmit="return validateform()">
 <input type="text" name="fname"><br>
 <input type="button" value="Click Me"/>
+hi hello I am here
 </form>
 </body>
 </html>
